# siveria

./: .env.example  Cargo.toml  Dockerfile  README.md
migrations/2025-01-19-085702_test/: down.sql  up.sql
src/: main.rs  schema.rs
src/routes/examples/: _routes.rs  mod.rs  postgres.rs  s3_delete.rs  s3_upload.rs
src/routes/health/: _routes.rs  heartbeat.rs  mod.rs  postgres.rs
src/service/: data_providers.rs  env.rs  in_deploy_migrations.rs  middlewares.rs  mod.rs  telemetry.rs
src/types/: mod.rs
src/utils/: acquire_pg_connection.rs  check_port_in_use.rs  mod.rs
src/utils/files/: get_extension_from_mime.rs
src/utils/images/: compress_image.rs  mod.rs
src/utils/uploads/: mod.rs  update_avatar.rs
